perf(harness): stop re-running the static-ability pass per candidate ability
The action-space scan re-runs on every priority prompt. Three costs on that
path were avoidable: target enumeration ran before the payability guard, the
life-payment fallback probed mana twice when no shard could take life, and
the LKI restriction host was cloned per ability instead of per card.

The dominant cost was elsewhere. GameActionUtil.getAlternativeCosts triggers
a full CR 613 layer pass, twice, for every ability with an alternate host, so
one enumeration ran ~35 of them. Bracket the pass and restore once.

Also sizes the engine JVM explicitly (SELF_HOSTED_NODE_JAVA_HEAP_MB,
_ACTIVE_PROCESSORS, _GC_LOG, _OPTS) instead of leaving ~30 of them to size
from the whole machine, and adds manabrew_node_decision_latency_seconds so
the fleet reports engine time without needing logs it does not ship.